Rebrand: Medieval Lego Wars  Age of Blocks

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Medieval Lego Wars - Build, Defend, Conquer! A strategic tower defense game with Lego-style building mechanics.">
-    <title>Medieval Lego Wars</title>
+        content="Age of Blocks - Build, Defend, Conquer! A strategic multiplayer tower defense game with block-style building mechanics.">
+    <title>Age of Blocks</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -183,7 +183,7 @@
 
         <!-- Start Screen / Lobby -->
         <div id="start-screen">
-            <h1 class="game-title">Medieval Lego Wars</h1>
+            <h1 class="game-title">Age of Blocks</h1>
             <p class="game-subtitle">Build • Defend • Conquer</p>
 
             <!-- Main Menu -->
