Complete farm removal, add single player mode selection (1v1, 2v2, 3v3 AI)

--- a/index.html
+++ b/index.html
@@ -71,40 +71,34 @@
                         <div class="name">Mine</div>
                         <div class="cost"><span class="cost-icon">🧱</span>50</div>
                     </div>
-                    <div class="card" data-type="building" data-id="farm">
-                        <span class="hotkey">2</span>
-                        <div class="icon">🌾</div>
-                        <div class="name">Farm</div>
-                        <div class="cost"><span class="cost-icon">🧱</span>40</div>
-                    </div>
 
                     <!-- Military Buildings -->
                     <div class="card" data-type="building" data-id="barracks">
-                        <span class="hotkey">3</span>
+                        <span class="hotkey">2</span>
                         <div class="icon">⚔️</div>
                         <div class="name">Barracks</div>
                         <div class="cost"><span class="cost-icon">🧱</span>100</div>
                     </div>
                     <div class="card" data-type="building" data-id="archery">
-                        <span class="hotkey">4</span>
+                        <span class="hotkey">3</span>
                         <div class="icon">🏹</div>
                         <div class="name">Archery</div>
                         <div class="cost"><span class="cost-icon">🧱</span>120</div>
                     </div>
                     <div class="card" data-type="building" data-id="stable">
-                        <span class="hotkey">5</span>
+                        <span class="hotkey">4</span>
                         <div class="icon">🐴</div>
                         <div class="name">Stable</div>
                         <div class="cost"><span class="cost-icon">🧱</span>150</div>
                     </div>
                     <div class="card" data-type="building" data-id="siege">
-                        <span class="hotkey">6</span>
+                        <span class="hotkey">5</span>
                         <div class="icon">💣</div>
                         <div class="name">Siege</div>
                         <div class="cost"><span class="cost-icon">🧱</span>200</div>
                     </div>
                     <div class="card" data-type="building" data-id="mage">
-                        <span class="hotkey">7</span>
+                        <span class="hotkey">6</span>
                         <div class="icon">🔮</div>
                         <div class="name">Mage Tower</div>
                         <div class="cost"><span class="cost-icon">🧱</span>180</div>
@@ -112,13 +106,13 @@
 
                     <!-- Defense Buildings -->
                     <div class="card" data-type="building" data-id="tower">
-                        <span class="hotkey">8</span>
+                        <span class="hotkey">7</span>
                         <div class="icon">🗼</div>
                         <div class="name">Tower</div>
                         <div class="cost"><span class="cost-icon">🧱</span>80</div>
                     </div>
                     <div class="card" data-type="building" data-id="wall">
-                        <span class="hotkey">9</span>
+                        <span class="hotkey">8</span>
                         <div class="icon">🧱</div>
                         <div class="name">Wall</div>
                         <div class="cost"><span class="cost-icon">🧱</span>30</div>
@@ -187,6 +181,20 @@
                     <button class="menu-btn" id="single-player-btn">🎮 Single Player</button>
                     <button class="menu-btn primary" id="create-room-btn">🏰 Create Room</button>
                     <button class="menu-btn" id="join-room-btn">🚪 Join Room</button>
+                </div>
+            </div>
+
+            <!-- Single Player Mode Selection -->
+            <div id="single-player-screen" class="menu-section hidden">
+                <h2>Single Player</h2>
+                <p style="margin-bottom: 20px; color: #aaa;">Choose your game mode:</p>
+                <div class="mode-selector" style="flex-direction: column; gap: 10px;">
+                    <button class="menu-btn sp-mode-btn" data-sp-mode="1v1" style="width: 100%;">⚔️ 1 vs 1 AI</button>
+                    <button class="menu-btn sp-mode-btn" data-sp-mode="2v2" style="width: 100%;">⚔️ 2 vs 2 AI</button>
+                    <button class="menu-btn sp-mode-btn" data-sp-mode="3v3" style="width: 100%;">⚔️ 3 vs 3 AI</button>
+                </div>
+                <div class="menu-buttons" style="margin-top: 20px;">
+                    <button class="menu-btn" id="back-from-sp">← Back</button>
                 </div>
             </div>
 
