--- a/index.html
+++ b/index.html
@@ -187,14 +187,29 @@
             <!-- Single Player Mode Selection -->
             <div id="single-player-screen" class="menu-section hidden">
                 <h2>Single Player</h2>
-                <p style="margin-bottom: 20px; color: #aaa;">Choose your game mode:</p>
-                <div class="mode-selector" style="flex-direction: column; gap: 10px;">
-                    <button class="menu-btn sp-mode-btn" data-sp-mode="1v1" style="width: 100%;">⚔️ 1 vs 1 AI</button>
-                    <button class="menu-btn sp-mode-btn" data-sp-mode="2v2" style="width: 100%;">⚔️ 2 vs 2 AI</button>
-                    <button class="menu-btn sp-mode-btn" data-sp-mode="3v3" style="width: 100%;">⚔️ 3 vs 3 AI</button>
+
+                <div class="form-group">
+                    <label>Game Mode</label>
+                    <div class="mode-selector" style="flex-wrap: wrap; gap: 8px;">
+                        <button class="mode-btn sp-mode-btn selected" data-sp-mode="1v1">1v1</button>
+                        <button class="mode-btn sp-mode-btn" data-sp-mode="2v2">2v2</button>
+                        <button class="mode-btn sp-mode-btn" data-sp-mode="3v3">3v3</button>
+                        <button class="mode-btn sp-mode-btn" data-sp-mode="ffa">FFA</button>
+                    </div>
                 </div>
+
+                <div class="form-group">
+                    <label>Map Size</label>
+                    <div class="mode-selector" style="gap: 8px;">
+                        <button class="mode-btn map-size-btn" data-map-size="small">Small</button>
+                        <button class="mode-btn map-size-btn selected" data-map-size="medium">Medium</button>
+                        <button class="mode-btn map-size-btn" data-map-size="large">Large</button>
+                    </div>
+                </div>
+
                 <div class="menu-buttons" style="margin-top: 20px;">
                     <button class="menu-btn" id="back-from-sp">← Back</button>
+                    <button class="menu-btn primary" id="start-sp-btn">Start Game ➜</button>
                 </div>
             </div>
 
