Remove 3v3 mode, fix multiplayer mode selector, add 4-corner map layout for 2v2/FFA

--- a/index.html
+++ b/index.html
@@ -193,7 +193,6 @@
                     <div class="mode-selector" style="flex-wrap: wrap; gap: 8px;">
                         <button class="mode-btn sp-mode-btn selected" data-sp-mode="1v1">1v1</button>
                         <button class="mode-btn sp-mode-btn" data-sp-mode="2v2">2v2</button>
-                        <button class="mode-btn sp-mode-btn" data-sp-mode="3v3">3v3</button>
                         <button class="mode-btn sp-mode-btn" data-sp-mode="ffa">FFA</button>
                     </div>
                 </div>
@@ -222,11 +221,10 @@
                 </div>
                 <div class="form-group">
                     <label>Game Mode</label>
-                    <div class="mode-selector">
-                        <button class="mode-btn" data-mode="ffa">FFA</button>
-                        <button class="mode-btn selected" data-mode="1v1">1v1</button>
-                        <button class="mode-btn" data-mode="2v2">2v2</button>
-                        <button class="mode-btn" data-mode="3v3">3v3</button>
+                    <div class="mode-selector mp-mode-selector">
+                        <button class="mode-btn mp-mode-btn" data-mode="ffa">FFA</button>
+                        <button class="mode-btn mp-mode-btn selected" data-mode="1v1">1v1</button>
+                        <button class="mode-btn mp-mode-btn" data-mode="2v2">2v2</button>
                     </div>
                 </div>
                 <div class="menu-buttons">
