--- a/index.html
+++ b/index.html
@@ -223,7 +223,32 @@
                 </div>
             </div>
 
-            <!-- Create Room Screen - Shows room code and waits -->
+            <!-- Lobby Waiting Room - Shows room code, players, and start button -->
+            <div id="lobby-room-screen" class="menu-section hidden">
+                <h2>Lobi</h2>
+                <div class="room-code-display" id="lobby-room-code">------</div>
+                <p class="waiting-text">Bu kodu arkadaşınla paylaş!</p>
+
+                <!-- Players in lobby -->
+                <div class="lobby-players">
+                    <h3>Oyuncular</h3>
+                    <div id="lobby-player-list" class="player-list-container">
+                        <!-- Players will be dynamically added here -->
+                    </div>
+                </div>
+
+                <div class="waiting-indicator">
+                    <span class="waiting-dot"></span>
+                    <span class="waiting-text" id="lobby-status">Rakip bekleniyor...</span>
+                </div>
+
+                <div class="menu-buttons lobby-room-buttons">
+                    <button class="menu-btn" id="leave-lobby-btn">← Ayrıl</button>
+                    <button class="menu-btn primary hidden" id="start-game-btn">🎮 Oyunu Başlat</button>
+                </div>
+            </div>
+
+            <!-- Legacy Create Room Screen (for direct room creation) -->
             <div id="create-room-screen" class="menu-section hidden">
                 <h2>Oda Kodun</h2>
                 <div class="room-code-display" id="room-code-display">------</div>
@@ -236,6 +261,7 @@
                     <button class="menu-btn" id="back-from-create">← İptal</button>
                 </div>
             </div>
+
 
             <!-- Join Room Screen -->
             <div id="join-room-screen" class="menu-section hidden">
